tests/ui/source-struct-not-error.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error("...")]
pub struct ErrorStruct {
    source: String,
}

fn main() {}
